# axum_webauthn

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  build.sh
assets/: auth.js  index.html
src/: auth.rs  config.rs  error.rs  main.rs  startup.rs
