[package]
name = "axum_webauthn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.1"
axum-sessions = "0.4.1"
rand = {version="0.8", features = ["min_const_gen"] }
thiserror = "1.0.38"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.3.5", features = ["fs", "trace", "compression-gzip"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
webauthn-rs = { version = "0.4.8", features = ["danger-allow-state-serialisation"] }
serde = { version = "1", features = ["derive"] }
uuid = { version = "1.2.2", features = ["v4"] }